maximeliron.com/content/stylesheets/resume.scss
@import "tailwindcss";

$alternating-color: #fffbec;

$stronger-text-color: black;
$normal-text-color: #4a4a4a;
$lighter-text-color: #7b7b7b;

body {
  color: $normal-text-color;
  background-color: #f7f7f7;
  font-family: "Helvetica Neue", "MS Trebuchet", sans-serif;
}

a,
a:focus,
a:visited {
  text-decoration: none;
  color: $normal-text-color;
}

a:hover {
  text-decoration: underline;
}
a[href*="pdf"].with-icon {
  background: url(../images/pdf-icon.gif) no-repeat 0 50%;
  padding-left: 20px;
}

em {
  color: $stronger-text-color;
}

h1,
h2,
h3 {
  font-family: "Helvetica Neue", "MS Trebuchet", sans-serif;
  font-weight: 600;
}

h2 {
  font-size: 1.5em;
}
h3 {
  margin-top: 1.2em;
  margin-bottom: 1em;
}

// back to top
h2 > a.top {
  color: $lighter-text-color;
  float: right;
  font-size: 0.5em;
  font-weight: 500;
  padding-top: 8px;
}

article > section {
  margin-bottom: 28px;
}

section > section:last-child {
  margin-bottom: 0;
}

section > h2 {
  padding-bottom: 5px;
  margin-bottom: 1em;
  border-bottom: 1px solid #dbdbdb;
}

.inline-list {
  @apply flex flex-row items-start flex-wrap;
  $left_margin: 5px;
  margin-left: -$left_margin;
  list-style-type: none;

  padding-left: 0;
  li {
    @apply font-medium text-sm;
    display: inline-block;
    background: $alternating-color;
    border-radius: 3px;
    padding: 4px 8px;
    margin: 4px $left_margin;
    white-space: nowrap;
  }
}

.with-bullets {
  @apply pl-4;
  list-style-type: disc;
}

.pre {
  @apply self-end mt-4 sm:mt-8 mb-4 px-3 sm:px-0;
  @apply text-sm;
  @apply opacity-80 hover:opacity-100 transition-opacity;
}

#container {
  margin: 0 auto;
  @apply max-w-4xl w-full;
  @apply flex flex-col;
}

.paper {
  @apply px-4 py-2 sm:px-12 sm:py-6;
  box-shadow: 0 0 16px #c4c4c4;
  @apply bg-white rounded-sm;
}

header {
  h1 {
    @apply text-4xl;
    margin-bottom: 0.1em;
  }
  h2 {
    margin-top: 0.3em;
    font-size: 1.6em;
    img {
      position: relative;
    }
  }
  p {
    color: $lighter-text-color;
  }
}

.header-section {
  @apply mt-6 mb-12 flex flex-col sm:flex-row justify-between sm:items-end;
}

#contact {
  @apply text-sm;
  @apply mt-5 sm:mt-0;

  li {
    margin-bottom: 4px;
    list-style-type: none;
    @apply flex flex-row items-center gap-2;
  }
  li h3 {
    width: 56px;
    margin: 0;
  }
  li h3,
  li p {
    font-size: 1.1em;
  }
}

#profile {
  p {
    text-align: justify;
  }
  img {
    @apply h-3 m-px;
    @apply inline-block;
    opacity: 0.7;
    vertical-align: baseline;
  }
  ul + p {
    @apply mt-3;
  }
}

p + p {
  @apply mt-2;
}

#skills,
#profile,
#experience,
#projects,
#education,
#interests,
footer {
}

#skills {
  @apply flex flex-col sm:flex-row items-stretch sm:justify-stretch gap-4 sm:gap-5 mt-2 mb-6 sm:mb-2;

  .vr {
    @apply mt-[2%] mb-[2%] bg-gray-200 w-px hidden sm:block;
  }

  & > div:not(.vr) {
    flex: 1;
  }
  h3:first-child {
    margin-top: 0;
  }
  a {
    @apply flex flex-row items-center gap-2;
  }
  a img {
    @apply h-4 w-4;
  }
}

li.past-project {
  @apply px-4 py-2 mb-4 sm:px-5 sm:py-3;
  @apply flex flex-col justify-stretch;

  border-radius: 4px;
  list-style-type: none;

  &:nth-child(2n + 1) {
    background-color: $alternating-color;
  }

  h3,
  p.client,
  p.period {
    margin: 0;
  }

  .title-client-period {
    @apply w-full flex flex-row items-start content-start sm:items-center  justify-between;
  }

  .title-client {
    @apply flex flex-col sm:flex-row items-start sm:items-center;
  }

  p.contact,
  p.tools {
    margin: 0.4em 0;
    font-size: 0.9em;
    span.label {
      color: $lighter-text-color;

      font-size: 0.9em;
    }
  }

  h3 {
    @apply inline-block sm:text-lg;
    @apply sm:pr-3 sm:mr-3 sm:border-r border-gray-400;
  }

  p.client {
    @apply inline-flex flex-row items-center content-center gap-1;

    font-weight: 600;
    color: $lighter-text-color;
    a,
    a:focus,
    a:visited {
      color: $lighter-text-color;
    }
    img {
      @apply w-4 h-4;
    }
  }

  p.period {
    @apply font-medium text-sm text-gray-500 mt-1 sm:justify-self-end;
  }
}

#projects .points-list {
  @apply mt-1;
  @apply text-sm;
}

footer {
  @apply text-sm;
  @apply mt-6 mb-12 px-1 sm:p-0;

  img {
    float: right;
    position: relative;
    top: 46px;
  }
  p {
    text-align: center;
    color: $lighter-text-color;
    opacity: 0.9;
    clear: both;
    margin: 0.6em 0;
  }
}

#toc {
  visibility: hidden;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 20;
  border-bottom: 1px solid #aaa;
  background: white;
  box-shadow: #c4c4c4 0 0 12px;
  opacity: 0.9;
  transition: opacity 200ms ease-in-out;

  @apply flex flex-row justify-center;

  & > div {
    @apply max-w-4xl w-full;
    @apply flex flex-row py-3 mx-2;
  }

  ul {
    @apply flex flex-row gap-2;
    @apply px-0;
  }
  h2 {
    display: none;
  }
  li.selected {
    border-bottom: 2px solid $normal-text-color;
  }
}

#toc:hover,
#toc.showing {
  opacity: 1;
}

@media only screen and (min-width: 1100px) {
  #toc {
    width: 95px;
    left: -3px;
    top: 60px;
    padding: 22px 26px 43px 26px;
    border-bottom: none;
    background: white url(../images/toc.png) no-repeat 100% 100%;
    h3 {
      color: $lighter-text-color;
    }
    li {
      display: block !important;
      padding-bottom: 2px;
    }
    border-radius: 4px;
    nav {
      margin-bottom: 18px;
    }

    li.selected {
      border-bottom: none;
      text-decoration: underline;
    }
  }
}

/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir {
  display: block;
  border: 0;
  text-indent: -999em;
  overflow: hidden;
  background-color: transparent;
  background-repeat: no-repeat;
  text-align: left;
  direction: ltr;
}
.ir br {
  display: none;
}

em {
  @apply font-medium;
}

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden {
  display: none !important;
  visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/* ==|== print styles =======================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
  *:not(.star) {
    background: transparent !important;
    color: black !important;
    box-shadow: none !important;
    text-shadow: none !important;
    filter: none !important;
    -ms-filter: none !important;
  } /* Black prints faster: h5bp.com/s */
  a,
  a:visited {
    text-decoration: none;
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  .ir a:after,
  a[href^="javascript:"]:after,
  a[href^="#"]:after {
    content: "";
  } /* Don't show links for images, or javascript/internal links */
  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  } /* h5bp.com/t */
  tr,
  img {
    page-break-inside: avoid;
  }
  ul,
  section {
    page-break-inside: avoid;
  }
  img {
    max-width: 100% !important;
  }
  @page {
    margin: 0.5cm;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h1,
  h2,
  h3,
  h4 {
    page-break-after: avoid;
  }
  #projects {
    position: relative;
  }
  li.past-project,
  #other-sites li {
    padding-right: 0 !important;
    padding-left: 0 !important;
    position: relative;
    page-break-inside: avoid;
  }
  h2 > a.top {
    display: none;
  }
  #container {
    margin-top: 0;
    padding-top: 0;
  }
  #contact,
  #skills {
    a:after {
      content: "";
    }
  }
  footer {
    display: none;
  }
  #toc {
    display: none;
  }
  .no-print {
    display: none;
  }
}

